--- a/lightsphone/src/main/AndroidManifest.xml
+++ b/lightsphone/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".watchService"
+            android:exported="true" />
     </application>
 
 </manifest>
