--- a/lightswear/build.gradle
+++ b/lightswear/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "moon.lights"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -20,8 +20,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.support:wearable:2.0.0-beta2'
-    compile 'com.google.android.gms:play-services-wearable:10.0.1'
-    provided 'com.google.android.wearable:wearable:2.0.0-beta2'
+    compile 'com.google.android.support:wearable:2.0.3'
+    compile 'com.google.android.gms:play-services-wearable:11.0.2'
+    provided 'com.google.android.wearable:wearable:2.0.3'
     compile project(':shared')
 }
